@@ -5,9 +5,9 @@ import guru.qa.niffler.model.CurrencyJson;
 import jakarta.annotation.Nonnull;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class CurrencyService {
@@ -19,10 +19,11 @@ public class CurrencyService {
         this.currencyRepository = currencyRepository;
     }
 
+    @Transactional(readOnly = true)
     public @Nonnull
     List<CurrencyJson> getAllCurrencies() {
         return currencyRepository.findAll().stream()
                 .map(CurrencyJson::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
